--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "twin.macro": "^3.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -46,7 +48,14 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
