--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
-    "twin.macro": "^3.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -49,10 +48,13 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1"
+    "react-is": "^18.2.0",
+    "tailwindcss": "^3.4.1",
+    "twin.macro": "^3.4.1"
   },
   "babelMacros": {
     "twin": {
