--- a/package.json
+++ b/package.json
@@ -6,13 +6,6 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.3",
     "@reduxjs/toolkit": "^2.1.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -20,7 +13,6 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
-    "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -54,7 +46,15 @@
     "prettier": "^3.2.5",
     "react-is": "^18.2.0",
     "tailwindcss": "^3.4.1",
-    "twin.macro": "^3.4.1"
+    "twin.macro": "^3.4.1",
+    "typescript": "^4.4.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   },
   "babelMacros": {
     "twin": {
