--- a/package.json
+++ b/package.json
@@ -21,12 +21,6 @@
     "test": "craco test",
     "eject": "craco eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -40,21 +34,23 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.1.4",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
-    "react-is": "^18.2.0",
-    "tailwindcss": "^3.4.1",
-    "twin.macro": "^3.4.1",
-    "typescript": "^4.4.2",
+    "@0seo8/eslint-config": "^0.0.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
+    "dependency": "^0.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5",
+    "react-is": "^18.2.0",
+    "tailwindcss": "^3.4.1",
+    "twin.macro": "^3.4.1",
+    "typescript": "^4.4.2"
   },
   "babelMacros": {
     "twin": {
